@@ -2,6 +2,7 @@ package com.datastax.spark.connector.writer
 
 import com.datastax.spark.connector.ColumnRef
 import com.datastax.spark.connector.cql.TableDef
+import com.datastax.spark.connector.types.{VarIntType, ColumnType}
 import org.apache.spark.sql.catalyst.expressions.Row
 
 /** A [[RowWriter]] that can write SparkSQL `Row` objects. */
@@ -11,14 +12,22 @@ class SqlRowWriter(val table: TableDef, val selectedColumns: IndexedSeq[ColumnRe
   override val columnNames = selectedColumns.map(_.columnName)
 
   private val columns = columnNames.map(table.columnByName)
+  private val columnTypes = columns.map(_.columnType)
   private val converters = columns.map(_.columnType.converterToCassandra)
 
   /** Extracts column values from `data` object and writes them into the given buffer
     * in the same order as they are listed in the columnNames sequence. */
   override def readColumnValues(row: Row, buffer: Array[Any]) = {
     require(row.size == columnNames.size, s"Invalid row size: ${row.size} instead of ${columnNames.size}.")
-    for (i <- 0 until row.size)
-      buffer(i) = converters(i).convert(row(i))
+    for (i <- 0 until row.size) {
+      buffer(i) = columnTypes(i) match {
+        case VarIntType => row(i) match {
+          case bigDecimal: java.math.BigDecimal => bigDecimal.toBigInteger
+          case bigInteger: java.math.BigInteger => bigInteger
+        }
+        case other: ColumnType[_] => other.converterToCassandra.convert(row(i))
+      }
+    }
 
   }
 
